# coredns-admin

./: .env.example  .gitignore  CONSERVATIVE_ANALYSIS.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  supervisord.conf
.github/workflows/: ci-cd.yml  docker-publish.yml  tauri-build.yml
backend/: Dockerfile  requirements.txt  run.py
backend/modules/: __init__.py
backend/modules/api/: __init__.py  dns_routes.py  domain_routes.py  etcd_routes.py
backend/modules/database/: __init__.py  connection.py  models.py  operations.py
backend/modules/etcd/: __init__.py  client.py  connection_pool.py  exceptions.py  operations.py
backend/modules/services/: __init__.py  connection_service.py  dns_service.py  domain_service.py  etcd_service.py
etc/: Corefile
frontend/: .dockerignore  .env.example  .env.tauri  Dockerfile  Dockerfile.simple  README.md  components.json  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/assets/: logo.tsx
frontend/src/components/: profile-dropdown.tsx  search.tsx
frontend/src/components/data-table/: toolbar.tsx  view-options.tsx
frontend/src/components/layout/: nav-user.tsx  (+1 more)
frontend/src/lib/: api.ts  cookies.ts
frontend/src/routes/: __root.tsx
frontend/src/stores/: auth-store.ts
scripts/: build-backend.py
(+45 files in other folders)
